# metal-prices-predictor

./: .gitignore  README.md  create_db.py  pyproject.toml  start.sh
db/: .env.example  create_db.py  utils.py
docker/: Dockerfile  docker-compose.yaml
docker/airflow/dags/: backup.py  get_prices.py  initializer.py  train_model.py
docker/airflow/plugins/custom_hooks/: parametrizedHttp.py
docker/airflow/plugins/ml/: model.py  model_training.py
docker/airflow/plugins/scripts/: .env.example  add_global_vars.py
docker/airflow/plugins/utils/: error_decorator.py
scripts/sql/: 12h_metal_prices_view.sql
sql/: seed.sql
utils/: utils.py
